.gitignore: add more Eclipse untracked folders. README.md: add more TODOs

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 .classpath
 .settings
 .wtpmodules
+.metadata
+RemoteSystemsTempFiles
+Servers
 
 # project build life cycle and execution related files
 bin
