--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.fabri1983.menuapp</groupId>
 	<artifactId>protocol</artifactId>
 	<packaging>jar</packaging>
 	<name>Menu App Protocol</name>
@@ -24,6 +23,7 @@
 		<dependency>
 			<groupId>org.fabri1983.menuapp</groupId>
 			<artifactId>core</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
