Now use dropwizard-guicey which is more up to date and doesn't suffer the jersey-guice problem when executing dropwizard rules in tests.

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -32,8 +32,8 @@
 		</dependency>
 
 		<dependency>
-            <groupId>com.hubspot.dropwizard</groupId>
-            <artifactId>dropwizard-guice</artifactId>
+            <groupId>ru.vyarus</groupId>
+            <artifactId>dropwizard-guicey</artifactId>
         </dependency>
 		
 		<dependency>
