--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 		<jackson.version>2.8.4</jackson.version>
 		<junit.version>4.12</junit.version>
 		<takari.cpsuite.version>1.2.7</takari.cpsuite.version>
-		<dropwizard.version>1.0.3</dropwizard.version>
-		<dropwizard.guice.version>1.0.0.2</dropwizard.guice.version>
+		<dropwizard.version>1.0.5</dropwizard.version>
+		<dropwizard.guicey.version>4.0.1</dropwizard.guicey.version>
 		<google.guice.version>4.1.0</google.guice.version>
 	</properties>
 
@@ -77,9 +77,9 @@
 			</dependency>
 		
 			<dependency>
-				<groupId>com.hubspot.dropwizard</groupId>
-				<artifactId>dropwizard-guice</artifactId>
-				<version>${dropwizard.guice.version}</version>
+				<groupId>ru.vyarus</groupId>
+				<artifactId>dropwizard-guicey</artifactId>
+				<version>${dropwizard.guicey.version}</version>
 			</dependency>
 			
 			<dependency>
