Add plugin for git revision and branch querying and put it into server-config.yml for REST accessing.

--- a/api/src/main/resources/profiles/server-config-prod.properties
+++ b/api/src/main/resources/profiles/server-config-prod.properties
@@ -1,1 +1,8 @@
-# Leave it blank. Production properties are provided on demand when executing the app
+# Truncated properties for fast failing. Production properties must be provided on demand when executing the app
+
+profile=0
+importantProperty1=0
+importantProperty2=0
+maxAllowedResults=0
+
+http.port=0
