--- a/api/src/main/resources/profiles/server-config-local.properties
+++ b/api/src/main/resources/profiles/server-config-local.properties
@@ -1,4 +1,4 @@
-testMessage="Profile: local. This is a test message defined in the server-config.yml file using resource filtering for the selected profile"
+profile="local"
 importantProperty1="hashing depth"
 importantProperty2="secret pass suffix"
 maxAllowedResults=50
