Add Dropwizard-Couchbase for couchbase integration

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -140,6 +140,11 @@
 			<artifactId>commons-lang</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.smartmachine</groupId>
+			<artifactId>dropwizard-couchbase</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
