--- a/api/src/main/resources/server-config.yml
+++ b/api/src/main/resources/server-config.yml
@@ -13,6 +13,12 @@ server:
     type: http
     port: ${http.port}
 
+couchbaseClientFactory:
+  bucket: default
+  hosts:
+    - http://localhost:8091/pools
+  password: ""
+
 logging:
   level: INFO
   appenders:
