api project: reverting removal of include tag. Using sudo mvn in Travis CI script

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -185,6 +185,9 @@
 			<resource>
 				<filtering>true</filtering>
 				<directory>${basedir}/src/main/resources</directory> <!-- from resources dir -->
+				<includes>
+					<include>server-config.yml</include> <!-- we only need this file -->
+				</includes>
 				<excludes>
 					<exclude>profiles/*</exclude>
 				</excludes>
