--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,15 @@ branches:
 install:
   - java -version
   - mvn --version
-  - mvn --batch-mode clean install -Plocal -DskipTests=true -Dmaven.buildNumber.skip=true
+  - sudo mvn --batch-mode clean install -Plocal -DskipTests=true -Dmaven.buildNumber.skip=true
 
 # overrides travis 'script' step
 script:
-  - mvn --batch-mode clean package -Plocal -Dmaven.buildNumber.skip=true
+  - sudo mvn --batch-mode clean package -Plocal -Dmaven.buildNumber.skip=true
 
 after_success:
 # using environment variable $repo_token set in travis web site
-  - mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
+  - sudo mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
   
 notifications:
   email: false
