--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,16 @@ branches:
 # this installs dependencies. Using default profile
 install:
   - java -version
-  - mvn --version
-  - sudo mvn --batch-mode clean install -Plocal -DskipTests=true -Dmaven.buildNumber.skip=true
+  - /usr/local/maven/bin/mvn --version
+  - sudo /usr/local/maven/bin/mvn --batch-mode clean install -Plocal -DskipTests=true -Dmaven.buildNumber.skip=true
 
 # overrides travis 'script' step
 script:
-  - sudo mvn --batch-mode clean package -Plocal -Dmaven.buildNumber.skip=true
+  - sudo /usr/local/maven/bin/mvn --batch-mode clean package -Plocal -Dmaven.buildNumber.skip=true
 
 after_success:
 # using environment variable $repo_token set in travis web site
-  - sudo mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
+  - sudo /usr/local/maven/bin/mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
   
 notifications:
   email: false
