Move benchamrk deps to parent pom. Move benchmark classe from api project to core project.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,26 +24,78 @@
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-core</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.smartmachine</groupId>
 			<artifactId>dropwizard-couchbase</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-testing</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.takari.junit</groupId>
+			<artifactId>takari-cpsuite</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjdk.jmh</groupId>
+			<artifactId>jmh-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjdk.jmh</groupId>
+			<artifactId>jmh-generator-annprocess</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>pl.wavesoftware</groupId>
+			<artifactId>jmh-junit-utilities</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
 		<plugins>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<includes>
+                        <include>**/UnitTestsSuite.class</include>
+                        <include>${benchmark.suite}</include> <!-- use -Dbenchmark.suite="**/BenchmarkTestsSuite.class" -->
+                    </includes>
+				</configuration>
+			</plugin>
 			
 		</plugins>
 	</build>
