Clean up pom.xml in all projects. Renamed profile local to dev. Add override properties capability so when building with dev profile there is an extra filtering step to override just what the developer wants. That file is not committed into the CVS.

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,9 @@ target
 *.log
 *.log.gz
 
+#--------------------
 # Maven shade plugin
+#--------------------
 dependency-reduced-pom.xml
 
 #-----------------------------
@@ -33,3 +35,6 @@ dependency-reduced-pom.xml
 # misc
 #------
 *~
+.DS_Store
+.gradle
+local.overrider.properties
