--- a/api/src/main/resources/server-config.yml
+++ b/api/src/main/resources/server-config.yml
@@ -1,4 +1,4 @@
-buildInfo: "${buildRevision} ${scmBranch} Build at ${buildDateTime}"
+buildInfo: "${buildRevision} ${scmBranch}. Build at ${buildDateTime}"
 profile: ${profile}
 
 importantProperty1: ${importantProperty1}
