Fix .travis.yml wrong maven profile. Fix use of <optional> for commons-collections4 dep in core/pom.xml not being added by uber-shade plugin

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
-			<optional>true</optional>
+			<optional>false</optional> <!-- if set to true then it seems is not added in the final jar by the uber-shade plugin on api project-->
 		</dependency>
 
 		<dependency>
