--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ install:
 
 # overrides travis 'script' step
 script:
-#  - sudo /usr/local/maven/bin/mvn --batch-mode clean package -Ptest -Dmaven.buildNumber.skip=true
+  - sudo /usr/local/maven/bin/mvn --batch-mode clean package -Ptest -Dmaven.buildNumber.skip=true
 
 after_success:
-# using environment variable $repo_token set in travis web site
+  # using environment variable $repo_token set in travis web site
   - sudo /usr/local/maven/bin/mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
   
 notifications:
